--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_DOMAIN=https://snaptik1click.com
-NEXT_PUBLIC_CONTACT_MAIL=snaptik1click@skiff.com
+NEXT_PUBLIC_DOMAIN=https://tiksnap.lol
+NEXT_PUBLIC_CONTACT_MAIL=snaptik@tiksnap.lol
 NEXT_PUBLIC_DOWNLOAD_URL=https://www.tikwm.com/video/media/hdplay/
 NEXT_PUBLIC_DOWNLOAD_MP3_URL=https://www.tikwm.com/video/music/
 NEXT_PUBLIC_TRENDING=https://www.tiktok.com/node/share/discover
